--- a/client/src/components/destinations.css
+++ b/client/src/components/destinations.css
@@ -169,7 +169,7 @@
 .navbar-ul{
     box-shadow: 0rem 0rem 2rem ;
 }
-.images-container{
+ .images-container{
     width: 100%;
     height: 75vh;
     left: 0%;
@@ -190,7 +190,7 @@
         transition-duration: 0.2s;
         display: flex;
         flex-direction: column;
-        justify-content: flex-start;
+        justify-content: flex-end;
         align-content: flex-start;
         align-items: center;
         background-color: whitesmoke;
@@ -205,15 +205,31 @@
         height: 85%;
         border-radius: 1rem;
     }
-    .insta-model li{
-        font-size: 2rem;
-        font-family: "Exo 2", sans-serif;
-    font-optical-sizing: auto;
-        margin: 1rem;
-       
+  @media screen and (min-width:1200px) {
+    @media screen and (max-width:1400px) {
+
+        .loc-img img{
+            margin-top: 0.5vw;
+            width: 95%;
+            height: 81%;
+            border-radius: 1rem;
+        }
+        .insta-model li {
+            font-size: 1.8rem;
+            font-family: "Exo 2", sans-serif;
+            font-optical-sizing: auto;
+            margin: 0.5vw 0.5vw;
+        }
+
     }
-  
-    }
+  }  
+    
+        .insta-model li {
+                font-size: 2rem;
+                font-family: "Exo 2", sans-serif;
+                font-optical-sizing: auto;
+                margin: 1rem;
+         }}
   @keyframes imagescont {
     from{
         opacity: 0;
@@ -507,6 +523,18 @@
 .wikidata a{
     text-decoration: none;
     color: teal;
+}.wikifallback{
+    width: 25vw;
+    height: 25vw;
+    margin: auto;
+    font-size: 1.9vw;
+    text-align: center;
+    font-family: "Exo 2", sans-serif;
+    font-optical-sizing: auto;
+}
+.wikifallback img{
+    width: 100%;
+    height: 100%;
 }
 .maps{
     font-size: 3rem;
@@ -608,7 +636,7 @@ transition-duration: 0.5s;
     position: relative;
     top: 15rem;
     max-width: 95%;
-    height: 40vh;
+    height: 30vw;
     margin: auto;
     overflow-y: hidden;
     overflow-x: scroll;
@@ -1028,9 +1056,22 @@ design-back-color {
     margin: 0px 48vw;
 
 }
+@media screen and (min-width:1025px) {
+    @media screen and (max-width:1200px) {
+        html{font-size: 21%;}
+    
+    .images-container{
+      
+            .loc-img img{
+                height: 75%;
+            }
+        
+    }
+}
+}
 
 @media screen and (min-width:700px) {
-    @media screen and (max-width:1200px) {
+    @media screen and (max-width:1024px) {
         html{
             font-size: 21%;
         }
@@ -1298,7 +1339,17 @@ design-back-color {
         .notfound{
             top: 1rem;
         }
-       
+        .wikifallback {
+            width: 50vw;
+            height: 50vw;
+            position: relative;
+            margin: auto;
+            font-size: 3.9vw;
+            text-align: center;
+            font-family: "Exo 2", sans-serif;
+            font-optical-sizing: auto;
+            top: 11vw;
+        }
     }
 }
 
@@ -1572,7 +1623,17 @@ design-back-color {
         .notfound{
             top: 10rem;
         }
-       
+        .wikifallback {
+            width: 50vw;
+            height: 50vw;
+            position: relative;
+            margin: auto;
+            font-size: 3.9vw;
+            text-align: center;
+            font-family: "Exo 2", sans-serif;
+            font-optical-sizing: auto;
+            top: 11vw;
+        }
     }
 }
 
@@ -1645,6 +1706,21 @@ design-back-color {
             width: 20vw;
             margin: 0px 40vw;
             font-size: 4vw;
+        }
+        .wikifallback{
+            width: 80vw;
+            height: 50vh;
+            position: relative;
+            top: 6vw;
+            font-size: 5.9vw;
+            text-align: center;
+            color: #232F3E;
+            font-family: "Exo 2", sans-serif;
+            font-optical-sizing: auto;
+        }
+        .wikifallback img{
+            width: 100%;
+            height: 100%;
         }
         .mw-content-ltr mw-parser-output{
             width: 98vw;
