--- a/client/src/dest-cards/dest_cards.css
+++ b/client/src/dest-cards/dest_cards.css
@@ -8,7 +8,7 @@
     word-wrap: break-word;
     /* width: 80%; */
     margin: 1% 5%;
-    height: 75rem;
+    height: 30vw;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
@@ -109,13 +109,13 @@
 
 .place-head{
     height: 80%;
-    padding: 30px 0;
+    padding: 15px 0;
     box-sizing: border-box;
     top: 0.5vw;
     font-family: "Exo 2", sans-serif;
     font-optical-sizing: auto;
     position: absolute;
-    font-size: 3rem;
+    font-size: 1.3vw;
     text-align: center;
     left: 5%;
     max-width: 90%;
@@ -188,8 +188,204 @@ animation: explore-btn-border 10s infinite ease;
     }
 }
 
-@media screen and (min-width:700px) {
+@media screen and (min-width:1025px) {
     @media screen and (max-width:1200px) {
+        html{
+            font-size: 21%;
+        }
+        .main-card{
+            position: relative;
+            top: 15rem;
+            border-radius: 2rem;
+            max-width: 90%;
+            background-color: transparent;
+            word-wrap: break-word;
+            /* width: 80%; */
+            margin: 1% 5%;
+            height: 30vw;
+            display: flex;
+            align-items: center;
+            justify-content: space-evenly;
+            overflow-x: scroll;
+            scroll-snap-type: x mandatory;
+            scroll-behavior: smooth;
+           
+            /* box-shadow: 0vw 0vw 1vw inset; */
+        
+        
+        }
+        @keyframes img {
+            from{opacity: 0;}
+            to{opacity: 1;}
+        }
+        
+        .slidernav{
+            display: none;
+        }
+        .main-card::-webkit-scrollbar{
+            display: none;
+        }
+        
+        .img{
+            display: flex;
+            flex-direction: column;
+           width: 21.4vw;
+            height: 94%;
+            position: relative;
+            /* left: 100%; */
+            /* left: 75%; */
+            margin-left: 1vw;
+           
+           /* border-radius: 2rem; */
+           box-shadow: 0rem 0rem 1rem #232F3E;
+             align-items: center; 
+             justify-content: center; 
+             scroll-snap-align: end; 
+             overflow-y: hidden; 
+             animation: img 1s 1 ease;
+            /* animation: autorun 9s infinite linear ;
+            animation-delay: (1s * (var(--position)-1)); */
+        }
+        
+        .img:hover{
+           
+            p{
+                /* top: 2rem; */
+                
+               /* visibility: visible; */
+               opacity: 1;
+               transition-duration: 0.5s;
+            
+            }
+        }
+        .img img{
+            width: 95%;
+            height: 89%;
+            border-radius: 2rem;
+            margin-top: 0.5vw;
+            /* margin-left: 0.5vw; */
+        }
+        .placedesc{
+            width: 70%;
+            height: 95%;
+            /* margin-top: 0.5%; */
+            background-color: white;
+            position: relative;
+            box-shadow: 0rem 0rem 3rem inset;
+            font-size: 3rem;
+            font-family: monospace;
+            padding: 1.5rem;
+        }
+        .explorebtncont{
+          display: flex;
+          align-items: center;
+          justify-content: space-evenly;
+          width: 100%;
+          height: 3vw;
+        }
+        .placename{
+            position: relative;
+            top: 0vw;
+            height: 2vw;
+            /* overflow: hidden; */
+            text-align: center;
+            font-size: 1.5vw;
+            color: #232F3E;
+            margin: 0;
+            /* background: linear-gradient(to right, black,rgb(153, 46, 46));
+            -webkit-text-fill-color: transparent;
+            -webkit-background-clip: text; */
+            font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+            letter-spacing: 0.5rem;
+            max-width: 100%;
+            transition-duration: 0.5s;
+        }
+        
+        .place-head{
+            height: 80%;
+            padding: 15px 0;
+            box-sizing: border-box;
+            top: 0.5vw;
+            font-family: "Exo 2", sans-serif;
+            font-optical-sizing: auto;
+            position: absolute;
+            font-size: 1.3vw;
+            text-align: center;
+            left: 5%;
+            max-width: 90%;
+            opacity: 0;
+            backdrop-filter:blur(1rem);
+            /* transition-duration: 0.5s; */
+            color: aliceblue;
+            border-radius: 1vw;
+            background-color: #00000085;
+            font-weight: 600;
+            /* transition-duration: 1s; */
+            
+        }
+        .location-more-btn{
+            position: relative;
+            top: 15rem;
+            margin: 0rem 114.5rem;
+            background-color: green;
+            color: aliceblue;
+            font-family: monospace;
+        
+        }
+        .maincardscroll{
+            display: flex;
+            justify-content: space-evenly;
+            align-items: center;
+            height: 100%;
+            width: 190vw;
+            align-items: center;
+            
+            /* min-width: calc((22vw) * 9); */
+        }
+        .explorebtn{
+            position: relative;
+        font-size: 1vw;
+        height: 2.5vw;
+        /* margin: auto; */
+        /* left: 80%; */
+        background-color: #ffd86a;
+        border: none;
+        border-radius: 3vw;
+        /* box-shadow: 0vw 1vw 2vw; */
+        list-style: none;
+        padding: 0.5vw;
+        box-sizing: border-box;
+        animation: explore-btn-border 10s infinite ease;
+        
+        }
+        .explorebtn a{
+            text-decoration: none;
+            color: #232F3E;
+            font-family: "Exo 2", sans-serif;
+            font-optical-sizing: auto;
+        }
+        @keyframes explore-btn-border {
+            0%{
+                border-radius: 5vw 4vw 2vw 3vw;
+            }
+            25%{
+                border-radius: 3vw 5vw 4vw 2vw
+            }
+            50%{
+                border-radius: 2vw 3vw 5vw 4vw
+            }
+            75%{
+                border-radius: 4vw 2vw 3vw 5vw
+            }
+            100%{
+                border-radius: 5vw 4vw 2vw 3vw
+            }
+        }
+    }
+}
+
+@media screen and (min-width:700px) {
+    @media screen and (max-width:1024px) {
         html{
             font-size: 21%;
             
@@ -199,7 +395,7 @@ animation: explore-btn-border 10s infinite ease;
         }
         
         .main-card{
-            height: 100rem;
+            height: 60vw;
         }
         .placename{
             font-size: 3vw;
@@ -226,11 +422,11 @@ animation: explore-btn-border 10s infinite ease;
         }
         .place-head{
             /* top: -95rem; */
-            height: 79rem;
+            height: 80%;
             overflow-y: scroll;
             font-size: 2.5vw;
             left: 0%;
-            margin: 0 2%;
+            margin: 5% 5%;
             max-width: 100%;
             background-color: #0000007d;
             backdrop-filter: none;
