--- a/client/src/index.css
+++ b/client/src/index.css
@@ -108,7 +108,7 @@ body{
     font-family: "Exo 2", sans-serif;
     font-optical-sizing: auto;
     font-weight: 700;
-    font-size: 3.5rem;
+    font-size: 1.8vw;
     font-style: normal;
 }
 .navbar-li a:hover{
@@ -147,6 +147,13 @@ body{
     transform: translateX(2vw);
     
 } */
+ /* @media screen and (min-width:1024px) {
+    @media screen and (max-width:1200px) {
+
+        
+    }
+    
+ } */
 @media screen and (min-width:480px) {
     @media screen and (max-width:700px) {
     html{
@@ -176,7 +183,7 @@ body{
     }}
 
 @media screen and (min-width:700px) {
-    @media screen and (max-width:1200px) {
+    @media screen and (max-width:1024px) {
         html{
             font-size: 21%;
 
