Update footer.css foot height

--- a/client/src/footer/footer.css
+++ b/client/src/footer/footer.css
@@ -149,7 +149,7 @@
             font-size: 21%;
         }
         .foot{
-            height: 65rem;
+            height: 30vw;
         }
         .brandname{
             font-size: 8vw;
