--- a/client/src/components/destinations.css
+++ b/client/src/components/destinations.css
@@ -836,6 +836,7 @@ transition-duration: 0.5s;
     /* position: absolute;
         left: 85%;
         top: 15.2rem; */
+        visibility: hidden;
         font-family: "Exo 2", sans-serif;
     font-optical-sizing: auto;
     font-weight: 600;
@@ -1320,6 +1321,7 @@ design-back-color {
         #checkout{
             height: 4vh;
             font-size: 2.5vw;
+            /* visibility: hidden; */
 
         }
         .total-price{
